--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -2,7 +2,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         
   <modelVersion>4.0.0</modelVersion>
+
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.1.1</version>
+    <relativePath/> <!-- search from Maven Central -->
+  </parent>
+
   <groupId>com.example</groupId>
   <artifactId>banking-app</artifactId>
   <version>1.0.0</version>
@@ -12,7 +21,6 @@
 
   <properties>
     <java.version>17</java.version>
-    <spring.boot.version>3.1.1</spring.boot.version>
   </properties>
 
   <dependencies>
@@ -31,6 +39,7 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
+      <scope>runtime</scope>
     </dependency>
 
     <!-- JPA -->
@@ -46,7 +55,6 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>${spring.boot.version}</version>
       </plugin>
     </plugins>
   </build>
